[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client_window"
autobins = false

[features]
default = []

[dependencies]
renet = "1.0.0"
renet_netcode = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minifb = "0.25"

[[bin]]
name = "client_cli"
path = "src/bin/client_cli.rs"

[[bin]]
name = "client_window"
path = "src/bin/client_window.rs"
