[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.15.3"
bevy_ecs = "0.15.3"
bevy_time = "0.15.3"
bevy_renet = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6.3"
renet = "1.0.0"
renet_netcode = "1.0.0"
rand = "0.9.0"